fix tabs on mobile

--- a/css/app_responsive.css
+++ b/css/app_responsive.css
@@ -284,7 +284,7 @@ screen-btn:first {
     -webkit-box-direction: normal;
     -ms-flex-direction: column;
     flex-direction: column;
-    min-width: 400px;
+    /* min-width: 400px; */
 }
 
 .sidebar.closed {
